--- a/rdkit_step/data/references.bib
+++ b/rdkit_step/data/references.bib
@@ -28,6 +28,7 @@ See the documentation for the Reference Handler for the other arguments to cite(
 # are automatically filled in with information about current version of the plug-in.
 # This is handled in seamm/nody.py, the run() method.
 
+# RDKit_step software package
 @misc{rdkit_step,
 	author = {Mohammad Mostafanejad},
 	title = {Rdkit plug-in for SEAMM},
@@ -39,6 +40,7 @@ See the documentation for the Reference Handler for the other arguments to cite(
 	version = {$version}
 }
 
+# RDKit software website
 @misc{rdkit_website,
 	author = {Jacob Gora and Gareth Jones and Brian Kelley and Ricardo Rodriguez-Schmidt and Paolo Tosco and Kazuya Ujihara and Riccardo Vianello},
 	title = {RDKit: Open-source cheminformatics},
@@ -128,10 +130,7 @@ See the documentation for the Reference Handler for the other arguments to cite(
 	volume = {36},
 	number = {22},
 	pages = {3219-3228},
-	year = {1980},
-	issn = {0040-4020},
-	doi = {https://doi.org/10.1016/0040-4020(80)80168-2},
-	url = {https://www.sciencedirect.com/science/article/pii/0040402080801682},
+	year = {1980},rdkit_websiteence/article/pii/0040402080801682},
 	author = {Johann Gasteiger and Mario Marsili},
 	abstract = {A method is presented for the rapid calculation of atomic charges in σ-bonded and nonconjugated π-systems. Atoms are characterized by their orbital electronegativities. In the calculation only the connectivities of the atoms are considered. Thus only the topology of a molecule is of importance. Through an iterative procedure partial equalization of orbital electronegativity is obtained. Excellent correlations of the atomic charges with core electron binding energies and with acidity constants are observed. This establishes their value in predicting experimental data.}
 }
@@ -163,63 +162,138 @@ See the documentation for the Reference Handler for the other arguments to cite(
 
 # BalabanJ
 @article{BALABAN1982399,
-title = {Highly discriminating distance-based topological index},
-journal = {Chemical Physics Letters},
-volume = {89},
-number = {5},
-pages = {399-404},
-year = {1982},
-issn = {0009-2614},
-doi = {https://doi.org/10.1016/0009-2614(82)80009-2},
-url = {https://www.sciencedirect.com/science/article/pii/0009261482800092},
-author = {Alexandru T. Balaban},
-abstract = {A new topological indexJ (based on distance sumssi as graph invariants) is proposed. For unsaturated or aromatic compounds, fractional bond orders are used in calculatingsi. The degeneracy ofJ is lowest among all single topological indices described so far. The asymptotic behaviour ofJ is discussed, e.g. whenn → ∞ in CnH2n = 2,Jar π for linear alkanes, andJ → ∞ for highly branched ones.}
+	title = {Highly discriminating distance-based topological index},
+	journal = {Chemical Physics Letters},
+	volume = {89},
+	number = {5},
+	pages = {399-404},
+	year = {1982},
+	issn = {0009-2614},
+	doi = {https://doi.org/10.1016/0009-2614(82)80009-2},
+	url = {https://www.sciencedirect.com/science/article/pii/0009261482800092},
+	author = {Alexandru T. Balaban},
+	abstract = {A new topological indexJ (based on distance sumssi as graph invariants) is proposed. For unsaturated or aromatic compounds, fractional bond orders are used in calculatingsi. The degeneracy ofJ is lowest among all single topological indices described so far. The asymptotic behaviour ofJ is discussed, e.g. whenn → ∞ in CnH2n = 2,Jar π for linear alkanes, andJ → ∞ for highly branched ones.}
 }
 
 # BertzCT
 @article{doi:10.1021/ja00402a071,
-author = {Bertz, Steven H.},
-title = {The first general index of molecular complexity},
-journal = {Journal of the American Chemical Society},
-volume = {103},
-number = {12},
-pages = {3599-3601},
-year = {1981},
-doi = {10.1021/ja00402a071},
-URL = {https://doi.org/10.1021/ja00402a071},
-eprint = {https://doi.org/10.1021/ja00402a071},
+	author = {Bertz, Steven H.},
+	title = {The first general index of molecular complexity},
+	journal = {Journal of the American Chemical Society},
+	volume = {103},
+	number = {12},
+	pages = {3599-3601},
+	year = {1981},
+	doi = {10.1021/ja00402a071},
+	URL = {https://doi.org/10.1021/ja00402a071},
+	eprint = {https://doi.org/10.1021/ja00402a071},
 }
 
-# Chi0, Chi1
+# Chi0 and Chi1
 # Chi0n- Chi4n
 # Chi0v- Chi4v
 # HallKierAlpha
 # Kappa1- Kappa3
 @inbook{doi:https://doi.org/10.1002/9780470125793.ch9,
-author = {Hall, Lowell H. and Kier, Lemont B.},
-publisher = {John Wiley & Sons, Ltd},
-isbn = {9780470125793},
-title = {The Molecular Connectivity Chi Indexes and Kappa Shape Indexes in Structure-Property Modeling},
-booktitle = {Reviews in Computational Chemistry},
-chapter = {},
-pages = {367-422},
-doi = {https://doi.org/10.1002/9780470125793.ch9},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9780470125793.ch9},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470125793.ch9},
-year = {1991},
-abstract = {Summary This chapter contains sections titled: Introduction Background for Molecular Connectivity Development of Molecular Connectivity Molecular Connectivity Approach Molecular Connectivity Method QSAR Applications of Molecular Connectivity Chi Indexes Characterization of Molecular Shape Background: Steric or Shape Influence Methods for Steric Quantification Model of Molecular Shape Based on Chemical Graph Theory Shape Infromation in the Kappa Values Encoding Atom Identity Kappa Index Values for Small Molecules Molecular Shape Quantitation General Applications Specific Application of Kappa Indexes Characterization of Skeletal Atoms, the Topological State}
+	author = {Hall, Lowell H. and Kier, Lemont B.},
+	publisher = {John Wiley & Sons, Ltd},
+	isbn = {9780470125793},
+	title = {The Molecular Connectivity Chi Indexes and Kappa Shape Indexes in Structure-Property Modeling},
+	booktitle = {Reviews in Computational Chemistry},
+	chapter = {},
+	pages = {367-422},
+	doi = {https://doi.org/10.1002/9780470125793.ch9},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9780470125793.ch9},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/9780470125793.ch9},
+	year = {1991},
+	abstract = {Summary This chapter contains sections titled: Introduction Background for Molecular Connectivity Development of Molecular Connectivity Molecular Connectivity Approach Molecular Connectivity Method QSAR Applications of Molecular Connectivity Chi Indexes Characterization of Molecular Shape Background: Steric or Shape Influence Methods for Steric Quantification Model of Molecular Shape Based on Chemical Graph Theory Shape Infromation in the Kappa Values Encoding Atom Identity Kappa Index Values for Small Molecules Molecular Shape Quantitation General Applications Specific Application of Kappa Indexes Characterization of Skeletal Atoms, the Topological State}
 }
 
 # Ipc
 @article{doi:10.1063/1.434593,
-author = {Bonchev,D. and Trinajstić,N.},
-title = {Information theory, distance matrix, and molecular branching},
-journal = {The Journal of Chemical Physics},
-volume = {67},
-number = {10},
-pages = {4517-4533},
-year = {1977},
-doi = {10.1063/1.434593},
-URL = {https://doi.org/10.1063/1.434593},
-eprint = {https://doi.org/10.1063/1.434593}
+	author = {Bonchev,D. and Trinajstić,N.},
+	title = {Information theory, distance matrix, and molecular branching},
+	journal = {The Journal of Chemical Physics},
+	volume = {67},
+	number = {10},
+	pages = {4517-4533},
+	year = {1977},
+	doi = {10.1063/1.434593},
+	URL = {https://doi.org/10.1063/1.434593},
+	eprint = {https://doi.org/10.1063/1.434593}
+}
+
+# LabuteASA
+@article{LABUTE2000464,
+	title = {A widely applicable set of descriptors},
+	journal = {Journal of Molecular Graphics and Modelling},
+	volume = {18},
+	number = {4},
+	pages = {464-477},
+	year = {2000},
+	issn = {1093-3263},
+	doi = {https://doi.org/10.1016/S1093-3263(00)00068-1},
+	url = {https://www.sciencedirect.com/science/article/pii/S1093326300000681},
+	author = {Paul Labute},
+	keywords = {molecular descriptors, QSAR, molecular diversity},
+	abstract = {Three sets of molecular descriptors computable from connection table information are defined. These descriptors are based on atomic contributions to van der Waals surface area, log P (octanol/water), molar refractivity, and partial charge. The descriptors are applied to the construction of QSAR/QSPR models for boiling point, vapor pressure, free energy of solvation in water, solubility in water, thrombin/trypsin/factor Xa activity, blood-brain barrier permeability, and compound classification. The wide applicability of these descriptors suggests uses in QSAR/QSPR, combinatorial library design, and molecular diversity work.}
+}
+
+# MOE ebsite
+# PEOE_VSA1- PEOE_VSA14
+# SMR_VSA1- SMR_VSA10
+# SlogP_VSA1- SlogP_VSA12
+# EState_VSA1- EState_VSA11
+# VSA_EState1 - VSA_EState10
+@misc{moe_website,
+	author = {MOE},
+	title = {Chemical Computing Group},
+	month = {December,
+	year = {2021},
+	organization = {MOE},
+	url = {https://www.chemcomp.com/index.htm},
+	address = {Montreal, Canada},
+}
+
+# TPSA
+@article{doi:10.1021/jm000942e,
+	author = {Ertl, Peter and Rohde, Bernhard and Selzer, Paul},
+	title = {Fast Calculation of Molecular Polar Surface Area as a Sum of Fragment-Based Contributions and Its Application to the Prediction of Drug Transport Properties},
+	journal = {Journal of Medicinal Chemistry},
+	volume = {43},
+	number = {20},
+	pages = {3714-3717},
+	year = {2000},
+	doi = {10.1021/jm000942e},
+	note ={PMID: 11020286},
+	url = {https://doi.org/10.1021/jm000942e},
+}
+
+# Molecular Quantum Numbers (MQNs)
+@article{https://doi.org/10.1002/cmdc.200900317,
+	author = {Nguyen, Kong T. and Blum, Lorenz C. and van Deursen, Ruud and Reymond, Jean-Louis},
+	title = {Classification of Organic Molecules by Molecular Quantum Numbers},
+	journal = {ChemMedChem},
+	volume = {4},
+	number = {11},
+	pages = {1803-1805},
+	keywords = {classification, databases, drugs, quantum numbers, the periodic table},
+	doi = {https://doi.org/10.1002/cmdc.200900317},
+	url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/cmdc.200900317},
+	eprint = {https://chemistry-europe.onlinelibrary.wiley.com/doi/pdf/10.1002/cmdc.200900317},
+	abstract = {Classifying organic molecules using counts for simple structural features, such as atom, bond and ring types, called molecular quantum numbers (MQNs), defines a universal chemical space for analyzing large molecular databases such as ZINC and GDB. The organization of MQN space is revealed by principal component analysis (PCA), as shown for the GDB-11 database (26.4 million structures, up to 11 atoms of C, N, O, F).},
+	year = {2009}
+}
+
+# MolLogP and MolMR
+@article{doi:10.1021/ci990307l,
+	author = {Wildman, Scott A. and Crippen, Gordon M.},
+	title = {Prediction of Physicochemical Parameters by Atomic Contributions},
+	journal = {Journal of Chemical Information and Computer Sciences},
+	volume = {39},
+	number = {5},
+	pages = {868-873},
+	year = {1999},
+	doi = {10.1021/ci990307l},
+	url = {https://doi.org/10.1021/ci990307l},
 }
