Added missing brace that caused tests to fail.

--- a/rdkit_step/data/references.bib
+++ b/rdkit_step/data/references.bib
@@ -248,7 +248,7 @@ See the documentation for the Reference Handler for the other arguments to cite(
 @misc{moe_website,
 	author = {MOE},
 	title = {Chemical Computing Group},
-	month = {December,
+	month = {December},
 	year = {2021},
 	organization = {MOE},
 	url = {https://www.chemcomp.com/index.htm},
