Fixed errors in references and made metadata for citations consistently a list.

--- a/rdkit_step/data/references.bib
+++ b/rdkit_step/data/references.bib
@@ -27,8 +27,6 @@ See the documentation for the Reference Handler for the other arguments to cite(
 # You might need to edit the author, address, etc. The month, year and version fields
 # are automatically filled in with information about current version of the plug-in.
 # This is handled in seamm/nody.py, the run() method.
-
-# RDKit_step software package
 @misc{rdkit_step,
 	author = {Mohammad Mostafanejad},
 	title = {Rdkit plug-in for SEAMM},
@@ -39,12 +37,10 @@ See the documentation for the Reference Handler for the other arguments to cite(
 	address = {Molecular Sciences Software Institute, Blacksburg, VA, USA},
 	version = {$version}
 }
-
-# RDKit software website
 @misc{rdkit_website,
 	author = {Jacob Gora and Gareth Jones and Brian Kelley and Ricardo Rodriguez-Schmidt and Paolo Tosco and Kazuya Ujihara and Riccardo Vianello},
 	title = {RDKit: Open-source cheminformatics},
-	month = {September,
+	month = {September},
 	year = {2021},
 	organization = {RDKit},
 	url = {https://doi.org/10.5281/zenodo.5773460},
@@ -105,6 +101,7 @@ See the documentation for the Reference Handler for the other arguments to cite(
 }
 
 # NPR1 and NPR2
+
 @article{doi:10.1021/ci025599w,
 	author = {Sauer, Wolfgang H. B. and Schwarz, Matthias K.},
 	title = {Molecular Shape Diversity of Combinatorial Libraries:  A Prerequisite for Broad Bioactivity},
@@ -124,15 +121,17 @@ See the documentation for the Reference Handler for the other arguments to cite(
 ####################
 
 # Gasteiger charges (MaxPartialCharge, MinPartialCharge, MaxAbsPartialCharge and MinAbsPartialCharge)
+                  
 @article{GASTEIGER19803219,
-	Atitle = {Iterative partial equalization of orbital electronegativity—a rapid access to atomic charges},
-	journal = {Tetrahedron},
-	volume = {36},
-	number = {22},
-	pages = {3219-3228},
-	year = {1980},rdkit_websiteence/article/pii/0040402080801682},
-	author = {Johann Gasteiger and Mario Marsili},
-	abstract = {A method is presented for the rapid calculation of atomic charges in σ-bonded and nonconjugated π-systems. Atoms are characterized by their orbital electronegativities. In the calculation only the connectivities of the atoms are considered. Thus only the topology of a molecule is of importance. Through an iterative procedure partial equalization of orbital electronegativity is obtained. Excellent correlations of the atomic charges with core electron binding energies and with acidity constants are observed. This establishes their value in predicting experimental data.}
+  title={Iterative partial equalization of orbital electronegativity—a rapid access to atomic charges},
+  author={Gasteiger, Johann and Marsili, Mario},
+  journal={Tetrahedron},
+  volume={36},
+  number={22},
+  pages={3219--3228},
+  year={1980},
+  publisher={Elsevier},
+  abstract = {A method is presented for the rapid calculation of atomic charges in σ-bonded and nonconjugated π-systems. Atoms are characterized by their orbital electronegativities. In the calculation only the connectivities of the atoms are considered. Thus only the topology of a molecule is of importance. Through an iterative procedure partial equalization of orbital electronegativity is obtained. Excellent correlations of the atomic charges with core electron binding energies and with acidity constants are observed. This establishes their value in predicting experimental data.}
 }
 
 # Morgan Fingerprints
