--- a/rdkit_step/data/references.bib
+++ b/rdkit_step/data/references.bib
@@ -121,18 +121,19 @@ See the documentation for the Reference Handler for the other arguments to cite(
 ####################
 
 # Gasteiger charges (MaxPartialCharge, MinPartialCharge, MaxAbsPartialCharge and MinAbsPartialCharge)
-                  
 @article{GASTEIGER19803219,
-  title={Iterative partial equalization of orbital electronegativity—a rapid access to atomic charges},
-  author={Gasteiger, Johann and Marsili, Mario},
-  journal={Tetrahedron},
-  volume={36},
-  number={22},
-  pages={3219--3228},
-  year={1980},
-  publisher={Elsevier},
-  abstract = {A method is presented for the rapid calculation of atomic charges in σ-bonded and nonconjugated π-systems. Atoms are characterized by their orbital electronegativities. In the calculation only the connectivities of the atoms are considered. Thus only the topology of a molecule is of importance. Through an iterative procedure partial equalization of orbital electronegativity is obtained. Excellent correlations of the atomic charges with core electron binding energies and with acidity constants are observed. This establishes their value in predicting experimental data.}
-}
+title = {Iterative partial equalization of orbital electronegativity—a rapid access to atomic charges},
+journal = {Tetrahedron},
+volume = {36},
+number = {22},
+pages = {3219-3228},
+year = {1980},
+issn = {0040-4020},
+doi = {https://doi.org/10.1016/0040-4020(80)80168-2},
+url = {https://www.sciencedirect.com/science/article/pii/0040402080801682},
+author = {Johann Gasteiger and Mario Marsili},
+abstract = {A method is presented for the rapid calculation of atomic charges in σ-bonded and nonconjugated π-systems. Atoms are characterized by their orbital electronegativities. In the calculation only the connectivities of the atoms are considered. Thus only the topology of a molecule is of importance. Through an iterative procedure partial equalization of orbital electronegativity is obtained. Excellent correlations of the atomic charges with core electron binding energies and with acidity constants are observed. This establishes their value in predicting experimental data.}
+}                  
 
 # Morgan Fingerprints
 @article{doi:10.1021/ci100050t,
